// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`git.branch.rebase journey given: [journey1] clean rebase: 4 commits onto 3 main commits when: [t1] git.branch.rebase begin (plan mode) then: shows preview: 4 commits to rebase, 3 behind 1`] = `
"🐢 heres the wave...

🐚 git.branch.rebase begin --mode plan
   ├─ rebase
   │  ├─ target: origin/main
   │  ├─ ahead: 4 commits
   │  │  ├─ HASH123 fix(api): feature commit 4
   │  │  ├─ HASH123 fix(api): feature commit 3
   │  │  ├─ HASH123 fix(api): feature commit 2
   │  │  ├─ HASH123 fix(api): feature commit 1
   │  └─ behind: 3 commits
   │     ├─ HASH123 chore: main commit 3
   │     ├─ HASH123 chore: main commit 2
   │     └─ HASH123 chore: main commit 1
   └─ meter
      ├─ commits: allowed
      └─ push: allowed

run with --mode apply to execute
"
`;

exports[`git.branch.rebase journey given: [journey1] clean rebase: 4 commits onto 3 main commits when: [t2] git.branch.rebase begin --mode apply then: rebase completes: all 4 commits rebased 1`] = `
"🐢 righteous!

🐚 git.branch.rebase begin --mode apply
   ├─ rebase
   │  ├─ target: origin/main
   │  ├─ commits: 4 ✓
   │  └─ status: clean
   └─ git.output
      ├─
      │
      │  From /tmp/TEST_REPO/origin
      │   * branch            main       -> FETCH_HEAD
      │  Rebasing (1/4)
      │  Rebasing (2/4)
      │  Rebasing (3/4)
      │  Rebasing (4/4)
      │  Successfully rebased and updated refs/heads/feature/big-feature.
      │
      └─

🌊 ready to push
   └─ rhx git.commit.push
"
`;

exports[`git.branch.rebase journey given: [journey2] multi-conflict rebase: 3 commits with 2 conflict files when: [t0] git.branch.rebase begin (plan mode) then: shows preview: 3 commits, 2 behind 1`] = `
"🐢 heres the wave...

🐚 git.branch.rebase begin --mode plan
   ├─ rebase
   │  ├─ target: origin/main
   │  ├─ ahead: 3 commits
   │  │  ├─ HASH123 fix(api): add feature-only file
   │  │  ├─ HASH123 fix(settings): feature settings
   │  │  ├─ HASH123 fix(config): feature config
   │  └─ behind: 2 commits
   │     ├─ HASH123 chore: add settings.yml on main
   │     └─ HASH123 chore: add config.json on main
   └─ meter
      ├─ commits: allowed
      └─ push: allowed

run with --mode apply to execute
"
`;

exports[`git.branch.rebase journey given: [journey2] multi-conflict rebase: 3 commits with 2 conflict files when: [t1] git.branch.rebase begin --mode apply then: shows conflict on first commit (config.json) 1`] = `
"🐢 hold up dude...

🐚 git.branch.rebase begin --mode apply
   ├─ rebase
   │  ├─ target: origin/main
   │  ├─ commits: 3
   │  └─ status: conflict
   ├─ conflict
   │  ├─ commit: HASH123 fix(config): feature config
   │  └─ files
   │     └─ config.json
   ├─ next steps
   │  ├─ settle conflicts in files above
   │  └─ rhx git.branch.rebase continue
   └─ git.output
      ├─
      │
      │  From /tmp/TEST_REPO/origin
      │   * branch            main       -> FETCH_HEAD
      │  Rebasing (1/3)
      │  Auto-merging config.json
      │  CONFLICT (add/add): Merge conflict in config.json
      │  error: could not apply HASH123... fix(config): feature config
      │  hint: Resolve all conflicts manually, mark them as resolved with
      │  hint: "git add/rm <conflicted_files>", then run "git rebase --continue".
      │  hint: You can instead skip this commit: run "git rebase --skip".
      │  hint: To abort and get back to the state before "git rebase", run "git rebase --abort".
      │  Could not apply HASH123... fix(config): feature config
      │
      └─
"
`;

exports[`git.branch.rebase journey given: [journey2] multi-conflict rebase: 3 commits with 2 conflict files when: [t2] settle first conflict (config.json) and continue then: shows second conflict (settings.yml) 1`] = `
"🐢 hold up dude...

🐚 git.branch.rebase continue
   ├─ rebase
   │  └─ status: conflict
   ├─ conflict
   │  ├─ commit: HASH123 fix(settings): feature settings
   │  └─ files
   │     └─ settings.yml
   ├─ next steps
   │  ├─ settle conflicts in files above
   │  └─ rhx git.branch.rebase continue
   └─ git.output
      ├─
      │
      │  [detached HEAD HASH123] fix(config): feature config
      │   Author: Test User <test@test.com>
      │   1 file changed, 1 insertion(+), 1 deletion(-)
      │  Rebasing (2/3)
      │  Auto-merging settings.yml
      │  CONFLICT (add/add): Merge conflict in settings.yml
      │  error: could not apply HASH123... fix(settings): feature settings
      │  hint: Resolve all conflicts manually, mark them as resolved with
      │  hint: "git add/rm <conflicted_files>", then run "git rebase --continue".
      │  hint: You can instead skip this commit: run "git rebase --skip".
      │  hint: To abort and get back to the state before "git rebase", run "git rebase --abort".
      │  Could not apply HASH123... fix(settings): feature settings
      │
      └─
"
`;

exports[`git.branch.rebase journey given: [journey2] multi-conflict rebase: 3 commits with 2 conflict files when: [t3] settle second conflict (settings.yml) and continue then: rebase completes (third commit had no conflict) 1`] = `
"🐢 righteous!

🐚 git.branch.rebase continue
   ├─ rebase
   │  ├─ commits: 3 ✓
   │  └─ status: complete
   ├─ meter
   │  └─ push: allowed
   └─ git.output
      ├─
      │
      │  [detached HEAD HASH123] fix(settings): feature settings
      │   Author: Test User <test@test.com>
      │   1 file changed, 2 insertions(+), 1 deletion(-)
      │  Rebasing (3/3)
      │  Successfully rebased and updated refs/heads/feature/conflict-heavy.
      │
      └─

🌊 ready to push
   └─ rhx git.commit.push
"
`;

exports[`git.branch.rebase journey given: [journey3] abort mid-conflict after multiple attempts when: [t0] git.branch.rebase begin --mode apply then: shows conflict on first commit 1`] = `
"🐢 hold up dude...

🐚 git.branch.rebase begin --mode apply
   ├─ rebase
   │  ├─ target: origin/main
   │  ├─ commits: 3
   │  └─ status: conflict
   ├─ conflict
   │  ├─ commit: HASH123 fix(api): feature abort-me
   │  └─ files
   │     └─ abort-me.txt
   ├─ next steps
   │  ├─ settle conflicts in files above
   │  └─ rhx git.branch.rebase continue
   └─ git.output
      ├─
      │
      │  From /tmp/TEST_REPO/origin
      │   * branch            main       -> FETCH_HEAD
      │  Rebasing (1/3)
      │  Auto-merging abort-me.txt
      │  CONFLICT (add/add): Merge conflict in abort-me.txt
      │  error: could not apply HASH123... fix(api): feature abort-me
      │  hint: Resolve all conflicts manually, mark them as resolved with
      │  hint: "git add/rm <conflicted_files>", then run "git rebase --continue".
      │  hint: You can instead skip this commit: run "git rebase --skip".
      │  hint: To abort and get back to the state before "git rebase", run "git rebase --abort".
      │  Could not apply HASH123... fix(api): feature abort-me
      │
      └─
"
`;

exports[`git.branch.rebase journey given: [journey3] abort mid-conflict after multiple attempts when: [t1] git.branch.rebase abort then: restores all 3 original commits 1`] = `
"🐢 no worries dude

🐚 git.branch.rebase abort
   └─ status: restored to pre-rebase state
"
`;
